feat:update status course, enroll course

--- a/Online_Course/Areas/Admin/Views/Courses/Edit.cshtml
+++ b/Online_Course/Areas/Admin/Views/Courses/Edit.cshtml
@@ -72,6 +72,7 @@
                                 <option value="@Online_Course.Models.CourseStatus.Draft">Nháp</option>
                                 <option value="@Online_Course.Models.CourseStatus.Private">Riêng tư</option>
                                 <option value="@Online_Course.Models.CourseStatus.Public">Công khai</option>
+                                <option value="@Online_Course.Models.CourseStatus.Closed">Đã đóng</option>
                             </select>
                         </div>
 
