--- a/Online_Course/Areas/Instructor/Views/Courses/Index.cshtml
+++ b/Online_Course/Areas/Instructor/Views/Courses/Index.cshtml
@@ -67,10 +67,10 @@
                                 <span class="material-symbols-outlined text-[16px]">play_lesson</span>
                                 @course.LessonCount Bài học
                             </div>
-                            <div class="flex items-center gap-1">
+                            @* <div class="flex items-center gap-1">
                                 <span class="material-symbols-outlined text-[16px] text-yellow-500">star</span>
                                 @course.AverageRating.ToString("F1")
-                            </div>
+                            </div> *@
                         </div>
 
                         <div class="flex gap-2 relative z-10">
